# mud-examples

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build.yml  docker.yaml  docker.yml  examples.yml  main.yml  publish-pypi.yml  publish.yml
.github/workflows/workflows/: main.yml  publish-pypi.yml
docs/: conf.py  index.rst
notebooks/: Contours.ipynb  Iteration.ipynb  MUD-Discretized.ipynb  MUD_SVD.ipynb
scripts/: MUD-Discretized.ipynb  Makefile  generate_pde_data.sh  generate_pde_data_normal.sh  generate_pde_data_uniform.sh  mud_problem.py  ode.py  poisson.py  process_data.py  results2n.pkl  results2u.pkl  run_decay.sh  run_poisson.py  run_poisson.sh
scripts/pde_2D/: mud_ref.pkl  pde_ref.pkl  ref_results2u.pkl
scripts/pde_2n/: mud_ref.pkl
scripts/pde_2u/: mud_ref.pkl
src/: models.py  plotting.py
src/mud_examples/: __init__.py  experiments.py  helpers.py  inv.py  lin.py  models.py  monomial.py  ode.py  parsers.py  pde.py  plotting.py  poisson.py  runner.py  summary.py  utils.py
src/mud_examples/data/pde_2D/: ref_950_2n.pkl  ref_990_2n.pkl
src/mud_examples/linear/: lin.py  models.py
